--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
     "helmich/typo3-typoscript-lint": "^2.5",
     "friendsofphp/php-cs-fixer": "^2.19",
     "genesis/behat-fail-aid": "^3.7",
-    "networkteam/sentry-client": "^3.0"
+    "networkteam/sentry-client": "^3.0",
+    "rector/rector": "^0.11.36"
   },
   "autoload": {
     "psr-4": {
