--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
   "type": "typo3-cms-extension",
   "license": "GPL-2.0-or-later",
   "require": {
-    "php": "^7.2",
+    "php": "^7",
     "ext-json": "*",
-    "typo3/cms-core": ">=10.0.0 <11.0.0"
+    "typo3/cms-core": "^10.4 || ^11.5"
   },
   "replace": {
     "typo3-ter/femanager": "self.version"
